src/objects/Pre_Demo_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Overview_Industry__c</fullName>
        <label>Company Overview - Industry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connections_to_Customers__c</fullName>
        <inlineHelpText>List any LinkedIn connections between the prospect and any customers we have.</inlineHelpText>
        <label>Connections to Customers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_LinkedIn_URL__c</fullName>
        <label>Contact LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pre Demo Notes</relationshipLabel>
        <relationshipName>Pre_Demo_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Environment__c</fullName>
        <label>Current IT Environment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Approved_By__c</fullName>
        <description>Stamped by Workflow based on who modified the Demo Approved by Manager checkbox</description>
        <label>Demo Approved By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Approved_Denied__c</fullName>
        <description>Demo Approved/Denied by Manager</description>
        <inlineHelpText>Demo Approved/Denied by Manager</inlineHelpText>
        <label>Demo Approved/Denied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Approved_by_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Approved by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Date_Time__c</fullName>
        <label>Demo Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Score_Calculated__c</fullName>
        <description>Roles:
Exec: F
Director: M
Implementer: R
Other: R
Unknown: R

Socket Amounts:
0-15: 0
15-25: 1
25-50: 2
50-100: 3
100+: 4</description>
        <formula>CASE(Contact__r.Title_Clean__c,
&quot;Exec&quot;,&quot;F&quot;,
&quot;Director&quot;,&quot;M&quot;,
&quot;R&quot;
)
+
IF(Related_Opportunity__r.of_CPU_Sockets__c&gt;=100,&quot;4&quot;,
IF(Related_Opportunity__r.of_CPU_Sockets__c&gt;=50,&quot;3&quot;,
IF(Related_Opportunity__r.of_CPU_Sockets__c&gt;=25,&quot;2&quot;,
IF(Related_Opportunity__r.of_CPU_Sockets__c&gt;=15,&quot;1&quot;,
&quot;0&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo Score (Calculated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Score__c</fullName>
        <label>Demo Score</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscoverOrg_Org_Chart_URL__c</fullName>
        <label>DiscoverOrg Org-Chart URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Exec_Level_Connections__c</fullName>
        <inlineHelpText>Enter in the name of the contact and the Turbo exec they are connected to.</inlineHelpText>
        <label>Exec Level Connections</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expectations_for_Call__c</fullName>
        <inlineHelpText>How Do They See VMTurbo Providing Value?</inlineHelpText>
        <label>Expectations for Call</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_do_they_deal_with_the_pain__c</fullName>
        <inlineHelpText>Compelling Reason Today</inlineHelpText>
        <label>Process for Solving Pain/Project</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_is_the_business_affected__c</fullName>
        <inlineHelpText>How Is That Measured?</inlineHelpText>
        <label>Impact Pain/Reason to Meet has on them</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <label>Other Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Contacts_Role_Background__c</fullName>
        <label>Other Relevant Contacts-Role/Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account_1__c</fullName>
        <formula>Contact__r.Account.Partner_Account_1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Role_Background__c</fullName>
        <label>Primary Contact - Title/Role/Background</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_approval_denial__c</fullName>
        <label>Reason for approval/denial</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_taking_meeting__c</fullName>
        <label>Pain/Compelling Reason for Meeting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recent_News__c</fullName>
        <label>Recent News</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pre Demo Notes</relationshipLabel>
        <relationshipName>Pre_Demo_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Technical_Pain_Points__c</fullName>
        <description>Opportunities for Improvement</description>
        <inlineHelpText>Opportunities for Improvement</inlineHelpText>
        <label>Technical Pain Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VMTurbo_History_with_Account__c</fullName>
        <label>VMTurbo History with Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>We_want_to_get_a_better_understanding_of__c</fullName>
        <label>We want to get a better understanding of</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Pre Demo Notes</label>
    <nameField>
        <label>Pre Demo Notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre Demo Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Manager_may_approve_Pre_Demo_Notes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISCHANGED(Demo_Approved_by_Manager__c),
ISCHANGED(Demo_Approved_Denied__c),
ISCHANGED(Reason_for_approval_denial__c)),
NOT($UserRole.Name=&quot;Manager - BDR Bus West&quot;),
NOT($UserRole.Name=&quot;Enterprise SDR Manager&quot;),
NOT($UserRole.Name=&quot;Manager - BDR Bus Central&quot;),
NOT($UserRole.Name=&quot;VP of Sales Development&quot;),
NOT($UserRole.Name=&quot;VMT SF admin&quot;))</errorConditionFormula>
        <errorDisplayField>Demo_Approved_Denied__c</errorDisplayField>
        <errorMessage>Only SDM may approve demos</errorMessage>
    </validationRules>
</CustomObject>